fixed footer spacing

--- a/Styles/indexs.css
+++ b/Styles/indexs.css
@@ -142,7 +142,7 @@ ul>li{
 #mainview{
   position: relative;
   min-height: 100vh;
-  padding-bottom: 75px;
+  padding-bottom: 50px;
 }
 #resume{
   height: 175px;
